[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-incident-triage-env"
version = "0.1.0"
description = "SRE incident triage environment for OpenEnv — AI agents diagnose and remediate production incidents"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
server = "incident_triage_env.server.app:main"

[tool.setuptools]
packages = ["incident_triage_env", "incident_triage_env.server", "incident_triage_env.scenarios"]

[tool.setuptools.package-dir]
incident_triage_env = "."
"incident_triage_env.server" = "server"
"incident_triage_env.scenarios" = "scenarios"
